--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 /Cep/nbproject/private/
 /cep/nbproject/private/
 /TesteBulma/nbproject/private/
+/Java/GerDB/nbproject/private/
+/Java/GerDB/build/
+/Java/GerBD/nbproject/private/
+/Java/GerBD/build/
+/Java/TesteOracle/nbproject/private/
+/Java/TesteOracle/build/
+/Java/Teste/nbproject/private/
+/Java/Teste/build/
+/Java/Teste2/nbproject/private/
+/Java/Teste2/build/
+/Java/Teste3/nbproject/private/
+/Java/Teste3/build/
+/Java/Teste4/nbproject/private/
+/Java/Teste4/build/
