--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /Java/Teste3/build/
 /Java/Teste4/nbproject/private/
 /Java/Teste4/build/
+/Java/viewSpark/nbproject/private/
+/Java/viewSpark/build/
+/Java/viewSpark/dist/
