antes do almoço

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /Java/CustomerDB/nbproject/private/
 /Java/CustomerDB/build/
 /Java/CustomerDB/dist/
+/Java/MessageBoard/nbproject/private/
+/Java/MessageBoard/build/
+/Java/Teste4/dist/
