implementação JDBC no glassfish

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 /Java/MessageBoard/nbproject/private/
 /Java/MessageBoard/build/
 /Java/Teste4/dist/
+/Java/Teste1/nbproject/private/
+/Java/Teste1/build/
+/Java/Teste1/dist/
