--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,20 @@
 /Java/Teste1/nbproject/private/
 /Java/Teste1/build/
 /Java/Teste1/dist/
+/Java/TesteRDB/nbproject/private/
+/Java/TesteRDB/build/
+/Java/TesteRDB/dist/
+/Java/TesteCon/nbproject/private/
+/Java/TesteCon/build/
+/Java/TesteCon/dist/
+/Java/Teste5/nbproject/private/
+/Java/WebApplication1/nbproject/private/
+/Java/WebApplication1/build/
+/Java/WebApplication1/dist/
+/Java/WebApplication2/nbproject/private/
+/Java/AffableBean_snapshot2/nbproject/private/
+/Java/AffableBean_snapshot2/build/
+/Java/AffableBean_snapshot2/dist/
+/Java/AffableBean/nbproject/private/
+/Java/AffableBean/build/
+/Java/AffableBean/dist/
