--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@
 /Java/AffableBean/nbproject/private/
 /Java/AffableBean/build/
 /Java/AffableBean/dist/
+/Java/Verna/nbproject/private/
+/Java/Verna/build/
