--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@
 /Java/AffableBean/dist/
 /Java/Verna/nbproject/private/
 /Java/Verna/build/
+/Java/VernaView/nbproject/private/
+/Java/VernaView/build/
+/Java/VernaView/dist/
