visual dark VernaView, tudo funcionando.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@
 /Java/VernaView/nbproject/private/
 /Java/VernaView/build/
 /Java/VernaView/dist/
+/Java/ApplicationClient1/nbproject/private/
+/Java/ApplicationClient1/build/
+/Java/ApplicationClient1/dist/
