--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,15 @@
 /Java/ApplicationClient1/nbproject/private/
 /Java/ApplicationClient1/build/
 /Java/ApplicationClient1/dist/
+/kafkaConsumer/.gradle/
+/kafkaConsumer/build/
+/kafkaConsumer3/nbproject/private/
+/kafkaConsumer2/target/
+/kafkaConsumer4/nbproject/private/
+/gradleproject1/.gradle/
+/mavenproject2/target/
+/mavenproject3/target/
+/mavenproject4/target/
+/mavenproject5/target/
+/mavenproject6/target/
+/mavenproject8/target/
