--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@
 /mavenproject5/target/
 /mavenproject6/target/
 /mavenproject8/target/
+/JavaApplication3/nbproject/private/
+/JavaApplication3/dist/
+/JavaApplication3/build/
+/JavaApplication4/nbproject/private/
+/JavaApplication4/build/
+/JavaApplication4/dist/
