--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,8 @@
 /JavaApplication4/nbproject/private/
 /JavaApplication4/build/
 /JavaApplication4/dist/
+/mavenproject9/target/
+/mavenproject10/target/
+/mavenproject11/target/
+/kafkaAnt/nbproject/private/
+/kafkaMyCons/target/
