--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,16 @@
 /mavenproject11/target/
 /kafkaAnt/nbproject/private/
 /kafkaMyCons/target/
+/Gerado/nbproject/private/
+/GerBD/nbproject/private/
+/GerBD/build/
+/JavaApplication6/nbproject/private/
+/JavaApplication6/build/
+/GerBD/dist/
+/TesteKafkaProdutor/target/
+/kafka261020/nbproject/private/
+/kafka261020/build/
+/kafka261020/dist/
+/kafka_27102020/nbproject/private/
+/kafka_27102020/build/
+/kafka_27102020/dist/
