--- a/Java/MercadinhoGosling-master/nbproject/private/private.properties
+++ b/Java/MercadinhoGosling-master/nbproject/private/private.properties
@@ -1,6 +1,9 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+do.jlink=false
+file.reference.ojdbc7.jar=C:\\Users\\Joel\\Downloads\\ojdbc-full\\OJDBC-Full\\ojdbc7.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Joel\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\Joel\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
